# RismTemplate

./: README.md  example.py  install.sh  pyproject.toml  testing.py  testing.rism  testing2.rism  upload.sh
RismTemplate/: main.py
