[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RismTemplate"
version = "0.0.2"
authors = [
  { name="Risky Mulya Nugraha", email="riskymulya@protonmail.com" },
]
description = "Quickly `generate new code` with less `repetitive coding` using `predefined templates`"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "jinja2==3.1.3",
    "inflect==7.2.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rizmulya/RismTemplate.git"
"Bug Tracker" = "https://github.com/rizmulya/RismTemplate"
